# wcecompat

./: .gitignore  CMakeLists.txt  script_wcecompat.bat  script_wcecompat_vs2005.bat  wceconfig.mak
include/: stdlib.h  winsock_extras.h
src/: stdlib_extras.cpp
